# Entrega1_MCPort

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-Proveedores_de_datos.ipynb  01_Quickstart.ipynb  02_Providers_Yahoo_AlphaVantage.ipynb  02_Reporting.ipynb  03_Portfolio_Analytics.ipynb  04_MonteCarlo_Sensitivity.ipynb  05_Reporting.ipynb  Demo_MonteCarlo_Portfolio.ipynb
scripts/: run_report.py
src/mcport/: __init__.py  models.py  montecarlo.py  plot.py  reports.py
tests/: test_models.py  test_montecarlo.py  test_montecarlo_extended.py  test_utils.py
