[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcport"
version = "0.1.0"
description = "Monte Carlo y reporting para series y carteras financieras"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Miriam Del Blanco" }]
requires-python = ">=3.11"
dependencies = [
  "numpy==2.3.4",
  "pandas==2.3.3",
  "matplotlib==3.10.7",
  "seaborn==0.13.2",
  "requests==2.32.5",
  "scipy==1.16.2",
  "yfinance==0.2.66",
  "alpha_vantage==3.0.0",
  "python-dotenv==1.2.1",
  "pillow==12.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcport*"]   # asegura que coja mcport y subpaquetes

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
